Support Docker Compose